tests/ui/transmutability/issue-101739-2.stderr
error[E0107]: trait takes at most 3 generic arguments but 6 generic arguments were supplied
  --> $DIR/issue-101739-2.rs:18:14
   |
LL |           Dst: BikeshedIntrinsicFrom<
   |                ^^^^^^^^^^^^^^^^^^^^^ expected at most 3 generic arguments
...
LL | /             ASSUME_LIFETIMES,
LL | |             ASSUME_VALIDITY,
LL | |             ASSUME_VISIBILITY,
   | |_____________________________- help: remove these generic arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
